# RMT

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_v1_foundation_tables.py
backend/app/: __init__.py  audit.py  config.py  db.py  logging.py  main.py
backend/app/api/: audit.py  credentials.py  domains.py  health.py  metadata.py  migrations.py  router.py
backend/app/migrations/: __init__.py  adapters.py  diff.py  engine.py  poller.py  preflight.py  registry.py  snapshot.py  translators.py
backend/app/models/: __init__.py  audit.py  base.py  credentials.py  migration.py  snapshot.py
backend/app/registrars/: __init__.py  base.py  http.py  registry.py
backend/app/registrars/combell/: __init__.py  adapter.py  fixtures.py  signer.py
backend/app/registrars/godaddy/: __init__.py  adapter.py  fixtures.py
backend/app/security/: __init__.py  encryption.py
backend/tests/: conftest.py  test_combell_adapter.py  test_combell_signer.py  test_credentials_api.py  test_diff_engine.py  test_encryption.py  test_godaddy_adapter.py  test_health.py  test_metadata_api.py  test_migration_engine.py  test_migration_registry.py  test_preflight.py  test_registrar_adapter.py  test_translators.py
docker/web/: Dockerfile  render-config.sh
docker/web/nginx/: http.conf.template  https.conf.template
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/hooks/: useCredentials.ts  useHealth.ts  useMigration.ts  useTheme.ts
frontend/src/lib/: api.ts  pricing.ts
frontend/src/pages/: AuditLog.tsx  Dashboard.tsx  Domains.tsx  MigrationWizard.tsx  Migrations.tsx  (+1 more)
scripts/: install.sh  update.sh
scripts/dev/: create-db.sql  debug-combell-job.sh  debug-combell-zone.sh  debug_combell_zone.py  test_combell_wildcard_post.py
(+3 files in other folders)
